test/corpus/primitives.txt
==================
Null value
==================

value: null

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (null))))))

==================
Boolean true
==================

flag: true

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (boolean))))))

==================
Boolean false
==================

flag: false

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (boolean))))))

==================
Integer zero
==================

value: 0

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (number))))))

==================
Positive integer
==================

value: 42

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (number))))))

==================
Negative integer
==================

value: -17

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (number))))))

==================
Decimal number
==================

value: 3.14

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (number))))))

==================
Negative decimal
==================

value: -2.5

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (number))))))

==================
Scientific notation - positive exponent
==================

value: 1.5e10

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (number))))))

==================
Scientific notation - negative exponent
==================

value: 2.5e-3

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (number))))))

==================
Scientific notation with capital E
==================

value: 1.5E10

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (number))))))

==================
Empty string
==================

value: ""

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (string))))))

==================
Quoted string
==================

value: "hello world"

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (string))))))

==================
Unquoted string
==================

value: hello

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string))))))

==================
Unquoted string with spaces
==================

text: hello world test

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string))))))

==================
Unquoted string with Unicode
==================

text: Héllo wörld 世界

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string))))))

==================
Unquoted string with emoji
==================

greeting: Hello 👋 🎉

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string))))))

==================
String with escape sequences
==================

text: "Line 1\nLine 2\tTabbed"

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value
          (string
            (escape_sequence)
            (escape_sequence)))))))

==================
Unquoted string - mathematical expression
==================

formula: 2+2=4

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string))))))

==================
Unquoted string - complex expression
==================

expr: 10*5+3

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string))))))

==================
Unquoted string - alphanumeric mix starting with digit
==================

code: 2b3c

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string))))))

==================
Unquoted string - alphanumeric mix starting with letter
==================

code: a2b3c

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string))))))

==================
Quoted string - version number (requires quoting due to multiple dots)
==================

version: "1.2.3"

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (string))))))

==================
Quoted string - date-like format (requires quoting due to hyphens)
==================

date: "2024-11-16"

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (string))))))

==================
Unquoted string - number with unit
==================

size: 42px

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string))))))

==================
Unquoted string - hash/ID starting with digit
==================

id: 123abc456

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string))))))

==================
Multiple fields - numbers and numeric strings
==================

age: 30
formula: 2+2=4
pi: 3.14
code: a2b3
version: 1.0

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (number)))
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string)))
      (pair
        key: (key (unquoted_key))
        value: (value (number)))
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string)))
      (pair
        key: (key (unquoted_key))
        value: (value (number))))))

==================
Unquoted string - delimiter context (object value)
==================

flag: true|false
data: value1,value2,value3

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string)))
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string))))))

==================
Unquoted string - leading zeros (forbidden in numbers)
==================

code: 00001
zip: 00501
id: 007
padded: 0042

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string)))
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string)))
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string)))
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string))))))

==================
Numbers - valid zero cases
==================

zero: 0
negative_zero: -0
decimal: 0.5
negative_decimal: -0.25
exponent: 0e10

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (number)))
      (pair
        key: (key (unquoted_key))
        value: (value (number)))
      (pair
        key: (key (unquoted_key))
        value: (value (number)))
      (pair
        key: (key (unquoted_key))
        value: (value (number)))
      (pair
        key: (key (unquoted_key))
        value: (value (number))))))

==================
Mixed - numbers vs leading zero strings
==================

valid_num: 42
valid_zero: 0
valid_decimal: 0.5
invalid_leading: 007
invalid_padded: 0001

---

(source_file
  (document
    (object
      (pair
        key: (key (unquoted_key))
        value: (value (number)))
      (pair
        key: (key (unquoted_key))
        value: (value (number)))
      (pair
        key: (key (unquoted_key))
        value: (value (number)))
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string)))
      (pair
        key: (key (unquoted_key))
        value: (value (unquoted_string))))))
